# vecmath

./: .gitignore  .gitmodules  .travis.yml  CI-linux.sh  CI-macos.sh  CI-windows.bat  CMakeLists.txt  LICENSE  README.md  appveyor.bat  appveyor.yml  travis-linux.sh  travis-macos.sh
.github/workflows/: ci.yml  clang-format-check.yml
compilation_benchmark/: cmath.cpp  compilation_benchmark.ps1  vecmath_all.cpp  vecmath_forward.cpp
include/vecmath/: abstract_line.h  approx.h  bbox.h  bbox_io.h  bezier_surface.h  constants.h  constexpr_mat_util.h  constexpr_util.h  constexpr_vec_util.h  convex_hull.h  distance.h  forward.h  glsh.h  intersection.h  line.h  line_io.h  mat.h  mat_ext.h  mat_io.h  plane.h  plane_io.h  polygon.h  quat.h  ray.h  ray_io.h  scalar.h  segment.h  util.h  utils.h  vec.h  vec_ext.h  vec_io.h
lib/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: bbox_test.cpp  bezier_surface_test.cpp  convex_hull_test.cpp  distance_test.cpp  intersection_test.cpp  line_test.cpp  mat_ext_test.cpp  mat_io_test.cpp  mat_test.cpp  plane_test.cpp  polygon_test.cpp  quat_test.cpp  ray_test.cpp  run_all.cpp  scalar_test.cpp  segment_test.cpp  test_utils.h  vec_ext_test.cpp  vec_io_test.cpp  vec_test.cpp
